--- a/src/components/styles/darkmode.css
+++ b/src/components/styles/darkmode.css
@@ -12,13 +12,9 @@ body {
 }
 
 body.dark-mode {
-  --background-color: #333;
-  --text-color: #fff;
-}
-
-body.dark-mode {
   background-color: #333;
   color: #fff;
+  background-image: url("/public/miscImages/bgdark.png");
 }
 
 .dark-mode .header h1 {
@@ -32,7 +28,7 @@ body.dark-mode {
 }
 
 .dark-mode .menu h2 {
-  background-color: #444;
+  background-color: #333;
 }
 
 .dark-mode .menu h1,
@@ -49,12 +45,7 @@ body.dark-mode {
 .dark-mode .appetizer,
 .dark-mode .dessert {
   background-color: #555;
-  border-radius: 20px;
   color: #fff;
-  display: flex;
-  gap: 2rem;
-  padding: 10px;
-  height: 150px;
 }
 
 .dark-mode .pizza img,
@@ -66,40 +57,6 @@ body.dark-mode {
   border-radius: 8px;
 }
 
-.dark-mode .pizza div,
-.dark-mode .appetizer div,
-.dark-mode .dessert div {
-  display: flex;
-  flex-direction: column;
-  gap: 0.8rem;
-  padding: 0.4rem 0;
-  font-size: 1.5rem;
-  text-align: left;
-}
-
-.dark-mode .pizza h3,
-.dark-mode .appetizer h3,
-.dark-mode .dessert h3 {
-  font-size: 2rem;
-  font-weight: 400;
-}
-
-.dark-mode .pizza p,
-.dark-mode .appetizer p,
-.dark-mode .dessert p {
-  font-size: 1.4rem;
-  font-weight: 300;
-  font-style: italic;
-  margin-bottom: auto;
-}
-
-.dark-mode .pizza span,
-.dark-mode .appetizer span,
-.dark-mode .dessert span {
-  display: block;
-  font-size: 1.6rem;
-  font-weight: bold;
-}
 .dark-mode .pizza.sold-out span,
 .dark-mode .appetizer.sold-out span,
 .dark-mode .dessert.sold-out span {
