--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -1,5 +1,3 @@
-/* *************** */
-
 .menu-section {
   border: 2px solid #ccc;
   padding: 1.5rem;
@@ -72,6 +70,7 @@
   gap: 2rem;
   padding: 10px;
   height: 150px;
+  border-radius: 12px;
 }
 
 .pizza img,
