--- a/src/components/styles/responsive.css
+++ b/src/components/styles/responsive.css
@@ -1,11 +1,9 @@
 @media (min-width: 600px) and (max-width: 1200px) {
   body {
-    padding: 1.6rem;
     padding-bottom: 4.8rem;
   }
 
   .container {
-    padding: 2rem;
     gap: 3rem;
   }
 
@@ -15,7 +13,7 @@
 
   .menu-section {
     margin: 0;
-    padding-bottom: 4.5rem;
+    margin-bottom: 10px;
   }
 
   .menu-items {
@@ -27,6 +25,7 @@
     font-size: 3rem;
     padding: 1rem;
     margin: 0;
+    margin-bottom: 2rem;
   }
 
   .menu > p {
@@ -41,15 +40,13 @@
   .pizza,
   .appetizer,
   .dessert {
-    margin-top: 3rem;
     flex-direction: row;
-    align-items: flex-start;
+    gap: 5rem;
   }
-
-  .pizza img,
-  .appetizer img,
-  .dessert img {
-    width: 30%;
+  .pizzas,
+  .appetizers,
+  .desserts {
+    gap: 1rem;
   }
 
   .pizza div,
@@ -57,7 +54,7 @@
   .dessert div {
     font-size: 1.5rem;
     text-align: left;
-    width: 70%;
+    width: 60%;
   }
 
   .pizza p,
@@ -84,7 +81,6 @@
 @media (min-width: 300px) and (max-width: 600px) {
   body {
     padding: 1.6rem;
-    padding-bottom: 4.8rem;
   }
 
   .container {
@@ -98,7 +94,7 @@
 
   .menu-section {
     margin: 0;
-    padding-bottom: 4.5rem;
+    margin-bottom: 10px;
   }
 
   .menu-items {
@@ -110,11 +106,11 @@
     font-size: 2.5rem;
     padding: 1rem;
     margin: 0;
+    margin-bottom: 2rem;
   }
 
   .menu > p {
     font-size: 2rem;
-    width: 100%;
   }
 
   .pizzas {
@@ -125,7 +121,6 @@
   .appetizer,
   .dessert {
     flex-direction: row;
-    align-items: flex-start;
   }
 
   .pizza img,
