--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -14,7 +14,7 @@ body {
   font-family: "Roboto Mono", sans-serif;
   color: #252525;
   font-weight: 400;
-  background-color: #f7f2e9;
+  background-color: #faefd9;
   border-bottom: 1.6rem solid #edc84b;
   min-height: 100vh;
   padding: 3.2rem;
@@ -27,6 +27,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .container {
