--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -24,7 +24,7 @@
   content: "";
   height: 3px;
   width: 4rem;
-  background-color: #edc84b;
+  background-color: #ffa600;
   position: absolute;
   top: calc(50% - 1px);
 }
