--- a/src/components/styles/responsive.css
+++ b/src/components/styles/responsive.css
@@ -1,4 +1,16 @@
 /* responsive.css */
+@media (min-width: 700px) and (max-width: 1200px) {
+  html {
+    font-size: 30%;
+  }
+
+  .pizza,
+  .appetizer,
+  .dessert {
+    height: 100px;
+  }
+}
+
 @media (min-width: 600px) and (max-width: 1200px) {
   body {
     padding-bottom: 4.8rem;
